--- a/Banhbonglan.html
+++ b/Banhbonglan.html
@@ -81,7 +81,7 @@
     <div class="video-wrapper">
       <h3>VIDEO HƯỚNG DẪN</h3>
       <video width="100%" controls>
-        <source src="banhbonglan.mp4" type="video/mp4">
+        <source src="https://miuxinhgai2828.github.io/Web/banhbonglan.mp4" type="video/mp4">
         Trình duyệt của bạn không hỗ trợ video.
       </video>
     </div>
